tests/snapshots/normalize__insta_normalize_multiple_diacritics-3.snap
---
source: tests/normalize.rs
expression: h.buffer_view()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  resume                                                                        "
"> résumé                                                                        "
"  2/4                                                                        0/0"
"> resume                                                                        "
