tests/snapshots/normalize__insta_normalize_multiple_diacritics.snap
---
source: tests/normalize.rs
expression: h.buffer_view()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  resume                                                                        "
"  résumé                                                                        "
"  naive                                                                         "
"> naïve                                                                         "
"  4/4                                                                        0/0"
">                                                                               "
