tests/snapshots/normalize__insta_normalize_multiple_diacritics@001.snap
---
source: tests/normalize.rs
description: "input: items [\"naïve\", \"naive\", \"résumé\", \"resume\"]\noptions: --normalize"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  resume                                                                        "
"  résumé                                                                        "
"  naive                                                                         "
"> naïve                                                                         "
"  4/4                                                                        0/0"
">                                                                               "
cursor: (24, 3)
