tests/snapshots/normalize__insta_normalize_multiple_diacritics@002.snap
---
source: tests/normalize.rs
description: "input: items [\"naïve\", \"naive\", \"résumé\", \"resume\"]\noptions: --normalize\nafter:\n  @type \"naive\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  naive                                                                         "
"> naïve                                                                         "
"  2/4                                                                        0/0"
"> naive                                                                         "
cursor: (24, 8)
