tests/snapshots/normalize__insta_normalize_multiple_diacritics@003.snap
---
source: tests/normalize.rs
description: "input: items [\"naïve\", \"naive\", \"résumé\", \"resume\"]\noptions: --normalize\nafter:\n  @ctrl 'w'\n  @type \"resume\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  resume                                                                        "
"> résumé                                                                        "
"  2/4                                                                        0/0"
"> resume                                                                        "
cursor: (24, 9)
