tests/snapshots/normalize__insta_normalize_negation.snap
---
source: tests/normalize.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  tea                                                                           "
"  cafe                                                                          "
"> café                                                                          "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
