tests/snapshots/normalize__insta_normalize_negation@001.snap
---
source: tests/normalize.rs
description: "input: items [\"café\", \"cafe\", \"tea\"]\noptions: --normalize"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  tea                                                                           "
"  cafe                                                                          "
"> café                                                                          "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
