tests/snapshots/normalize__insta_normalize_negation@002.snap
---
source: tests/normalize.rs
description: "input: items [\"café\", \"cafe\", \"tea\"]\noptions: --normalize\nafter:\n  @type \"!cafe\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> tea                                                                           "
"  1/3                                                                        0/0"
"> !cafe                                                                         "
cursor: (24, 8)
