tests/snapshots/normalize__insta_normalize_prefix-2.snap
---
source: tests/normalize.rs
expression: h.buffer_view()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  cafe solo                                                                     "
"> café con leche                                                                "
"  2/3                                                                        0/0"
"> ^cafe                                                                         "
