tests/snapshots/normalize__insta_normalize_prefix.snap
---
source: tests/normalize.rs
expression: h.buffer_view()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  té verde                                                                      "
"  cafe solo                                                                     "
"> café con leche                                                                "
"  3/3                                                                        0/0"
">                                                                               "
